# self-instruct-eval-ko

./: README.md  app.py  chatgpt.py  dataset_prepare.py  deepl_.py  dolly.py  download.sh  eval.py  evalset_prepare.py  gpt4.py  pyproject.toml  translate.py  user_oriented_instructions_chatgpt_ko.jsonl  user_oriented_instructions_deepl_ko.jsonl  user_oriented_instructions_deepl_ko_eval_chatgpt.jsonl  user_oriented_instructions_deepl_ko_eval_gpt4.jsonl  user_oriented_instructions_gpt4_ko.jsonl
